--- a/manifest.json
+++ b/manifest.json
@@ -1588,7 +1588,6 @@
 		"node_modules/tera-vec3.js": "tHokEIQEhIhWp9oLwUVZeH47soOLJkDFBSqFo8koYFU=",
 		"node_modules/updater/index.js": "xchz5nEWf+qIaGF2QX0LJ4ZxiQBCIK8UMWtk+1g/2dk=",
 		"node_modules/updater/package.json": "CilS25rKqWhEJmuv4crgxEpHa94pBhKHLWM3vRigQSE=",
-		"package.json": "wDwdu/qmtT8cxzVIlarcUbFPKvaCiL6RHOh+LegPnRw=",
-		"start.sh": "4/tt8lS84KOPLSKzCycTtzOr3zzMOfzkpRYuNmBlxKM="
+		"package.json": "wDwdu/qmtT8cxzVIlarcUbFPKvaCiL6RHOh+LegPnRw="
 	}
 }
