--- a/manifest.json
+++ b/manifest.json
@@ -26,8 +26,8 @@
 		"node_modules/log/package.json": "lcGzUW5dKL/CUzBumgC+YbHlyyp2WCXECXbQ5CFl4YY=",
 		"node_modules/long.js": "8zWFtBUZ+LvtfC57Qj63CyLZ+M9RkbAxHbBW9vNkbwY=",
 		"node_modules/tera-auth-ticket/LICENSE": "cpLWo3UGUigxIoh72YDXtC/8h6Ase1hYWvCDCUDBnXA=",
-		"node_modules/tera-auth-ticket/README.md": "q1akl0o0nb8bAc1fLb2tvOnvxarkAaDRIfKlJBdTFiU=",
-		"node_modules/tera-auth-ticket/index.js": "JhyqYlQ3PIAjZYKR9/qL5bQTqFTQsDi/o97OImODM0E=",
+		"node_modules/tera-auth-ticket/README.md": "oFyUKXxXrwGA6cxoqK0kHPr04gG8mohjCtd7yj1iEhQ=",
+		"node_modules/tera-auth-ticket/index.js": "dO+T53i725QK7knK1ryjsiuGMamxwEIiYk1dKxyNxDI=",
 		"node_modules/tera-auth-ticket/node_modules/@types/tough-cookie/LICENSE": "J+vanVHwpWt+KBzNgjCicjbctRwF9ksHhp7PbpZdaLA=",
 		"node_modules/tera-auth-ticket/node_modules/@types/tough-cookie/README.md": "0asPCuVFV0DMWeC6GQ4nzNKscprl6qVsOZGt/r94yyM=",
 		"node_modules/tera-auth-ticket/node_modules/@types/tough-cookie/index.d.ts": "B4RowrqUCEJgu0YiDlWMLPrhIiTn6BSnl5XrfHko3xg=",
@@ -151,10 +151,13 @@
 		"node_modules/tera-auth-ticket/node_modules/tough-cookie/lib/version.js": "G6dzCy4TKpS9A89uHYboMxDX4DxNtygKF7CjgcESrDI=",
 		"node_modules/tera-auth-ticket/node_modules/tough-cookie/package.json": "8Zsc3p7UB5124G1bqv70nduVR/3qkyTTBnPTQuLELYY=",
 		"node_modules/tera-auth-ticket/package-lock.json": "p2/rmMM9tkgpjufGdxiYG9xCbEHvkEWMmqhpjAehAfs=",
-		"node_modules/tera-auth-ticket/package.json": "FefUtaojiQw7B6/b4I+T20WHydoS/QEHciOosxyCnYc=",
-		"node_modules/tera-auth-ticket/regions/eu.js": "LbPMLuNvPmDLYygprgiCePeKNtYeeovVqqV9R/MHXv0=",
-		"node_modules/tera-auth-ticket/regions/na.js": "K3QvhrJq0bYdq6Yz9E06VwN9kVS4C8BKtfoHvuorlqY=",
-		"node_modules/tera-auth-ticket/regions/ru.js": "aLRTRCblrkgDhMXYWrAWjd0UJrUmc6lfKbFEq487hro=",
+		"node_modules/tera-auth-ticket/package.json": "FQsA0A+XEC7al++5CaIcue4e4Po0XXGs8AspQQ5NUYc=",
+		"node_modules/tera-auth-ticket/regions/eu.js": "ZTxqhIEyrua8+BOB9csqZUYeHYLlGUa3uE+x6CYAWjE=",
+		"node_modules/tera-auth-ticket/regions/na.js": "gSAdfDQdbdCgOAS1h9xdRpsuaSOzBptqcS2USuKBYYA=",
+		"node_modules/tera-auth-ticket/regions/ru.js": "ys95OIOM6d6WtfQf798TTu2xnKMVQIyfbPvVSLTOwkY=",
+		"node_modules/tera-auth-ticket/snare/des/LICENSE": "2n6rt7r999OuXp8iOqW9we7ORaxWncIbOwN1ILRGR2g=",
+		"node_modules/tera-auth-ticket/snare/des/index.js": "Sk97K9qrALo9qf/qS7vQnbt6m0MPe4h0KtHo9QuZC20=",
+		"node_modules/tera-auth-ticket/snare/index.js": "mgLY3YLMJhwN+Qy3s613Lcg6pEY+aoLPBN2OD2xVdzE=",
 		"node_modules/tera-data/README.md": "BvoivnDl/gfX/g+XcqapsELUSM4+NQ7jF1eQUBad5yQ=",
 		"node_modules/tera-data/map/protocol.343506.map": "vxVWPTNYwDy40WdCksZ79Vc3tE2Rgt+ycyjULtk1X2Y=",
 		"node_modules/tera-data/map/protocol.351828.map": "nGbZLa/IRHNwxr9Bn8PCkthf16V7xs3+SQAJPSFqxf4=",
@@ -166,8 +169,8 @@
 		"node_modules/tera-data/map/protocol.365099.map": "Lm6/2dn5UUZbiMSCsTg59TawvPU0kJWg4c67yfIDMJI=",
 		"node_modules/tera-data/map/protocol.365100.map": "au+r2EfISN4YX+HMUhiulymn8YzLXDxBKsUkFkDIRGs=",
 		"node_modules/tera-data/map/protocol.365101.map": "D/xfh+k+BAEbwiAR8OGhMjfsh0JlM7IMohUaVL01qY8=",
-		"node_modules/tera-data/map/protocol.367077.map": "GrP2NooqKfehSzPMJ6L0jOVR5XkmwNqWWaDsKUw3ZEQ=",
 		"node_modules/tera-data/map/protocol.366222.map": "rJPXEX4MUHoowhbbtd0IHmc1O04pmv3WLvWLCX+T0Z4=",
+		"node_modules/tera-data/map/protocol.367077.map": "GrP2NooqKfehSzPMJ6L0jOVR5XkmwNqWWaDsKUw3ZEQ=",
 		"node_modules/tera-data/map/sysmsg.27.map": "MZBjCaGL4i5JEtndLot2NdOrsoJ9UvM6mbwgskJQ/GE=",
 		"node_modules/tera-data/map/sysmsg.86.map": "5azqFqWPlXA+DDGmnHbYE5BXcedpAnbT0xcvObxo3cM=",
 		"node_modules/tera-data/map/sysmsg.87.map": "40W55D6+KDfXd3rAuD9aghLQJNjv+P4Pn620SZhf8gs=",
