--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 		"bin/cli/clientConnection.js": "3aCzBjq4uAIASxPLoz4mUY9ktRQNFNV810EO7SQJ8d0=",
 		"bin/cli/index.js": "XTI0BKtMtEiJXNpk0ogsazg9TknEiGD1UCTN2RxbVjQ=",
 		"bin/cli/servers.json": "a366eKZOen5hUjoFvOjd0cPiBECmyVhXCddqXG3Iuqg=",
-		"bin/cli/versions.json": "lJZ5LnVvZyTyBwL9gzjJwUe+1S55+h+z4ZHa6g1piiQ=",
+		"bin/cli/versions.json": "ZtOb4FBj8++D7SdsLsV0ojZURn8zwogreQdAqWb08us=",
 		"bin/configurator.js": "rRlv199GEpTwecKfFN0FewT8vbpj3P0u4pfOQtxsgV4=",
 		"bin/genmanifest.js": "RmnAlNEf7Mitl31MB9UQ4lFt6u3AG3BzGYpVwfpY3WY=",
 		"node_modules/hexy/.gitignore": "9s8/9y0tJEyuFqG71gEapN0hQfXlMvQeSHRRwUNwQRc=",
@@ -159,25 +159,18 @@
 		"node_modules/tera-auth-ticket/snare/des/index.js": "Sk97K9qrALo9qf/qS7vQnbt6m0MPe4h0KtHo9QuZC20=",
 		"node_modules/tera-auth-ticket/snare/index.js": "mgLY3YLMJhwN+Qy3s613Lcg6pEY+aoLPBN2OD2xVdzE=",
 		"node_modules/tera-data/README.md": "BvoivnDl/gfX/g+XcqapsELUSM4+NQ7jF1eQUBad5yQ=",
+		"node_modules/tera-data/integrity/92.json": "ZHqrSuiJydsWNrlMK6itkXubbbJ5qbKT57wQ8q+bcAw=",
+		"node_modules/tera-data/integrity/93.json": "Y0+M2Ta7lSQKqhFOczs6Xo93tXRby/XnyFD+XWqPYmE=",
 		"node_modules/tera-data/map/protocol.343506.map": "vxVWPTNYwDy40WdCksZ79Vc3tE2Rgt+ycyjULtk1X2Y=",
-		"node_modules/tera-data/map/protocol.351828.map": "nGbZLa/IRHNwxr9Bn8PCkthf16V7xs3+SQAJPSFqxf4=",
-		"node_modules/tera-data/map/protocol.356367.map": "Al5WoSjGBZACbwzXsHiwT660hGgEnaeCyIFvYhpHjj8=",
-		"node_modules/tera-data/map/protocol.357120.map": "aDYwSDLTUVWS9qZ2sMinQwqZoVjE82KyMOGoQCQ4BZM=",
-		"node_modules/tera-data/map/protocol.359532.map": "hpeJbA4HqRihGWSnx+T6N7y40yGw+AZa35XeELk6r34=",
-		"node_modules/tera-data/map/protocol.365097.map": "jvrM7O8C/28taXrxhvoXsXSzaYes7ygYCBdVSWZqZy4=",
-		"node_modules/tera-data/map/protocol.365098.map": "w7IkSXCXCgFLV2urJe/MrfVFjJ6aPRSshXbwpePZR9E=",
-		"node_modules/tera-data/map/protocol.365099.map": "Lm6/2dn5UUZbiMSCsTg59TawvPU0kJWg4c67yfIDMJI=",
-		"node_modules/tera-data/map/protocol.365100.map": "au+r2EfISN4YX+HMUhiulymn8YzLXDxBKsUkFkDIRGs=",
-		"node_modules/tera-data/map/protocol.365101.map": "D/xfh+k+BAEbwiAR8OGhMjfsh0JlM7IMohUaVL01qY8=",
-		"node_modules/tera-data/map/protocol.366222.map": "rJPXEX4MUHoowhbbtd0IHmc1O04pmv3WLvWLCX+T0Z4=",
 		"node_modules/tera-data/map/protocol.367077.map": "GrP2NooqKfehSzPMJ6L0jOVR5XkmwNqWWaDsKUw3ZEQ=",
+		"node_modules/tera-data/map/protocol.367079.map": "1k7bY5MQIlDv8IaDHy96S6qFzP/8oeklTUdvX7Tf2sU=",
+		"node_modules/tera-data/map/protocol.367080.map": "0ilzhM6aMC2KDH5I2GsEBCNiwlBktTQrjgz9/YTFq7k=",
+		"node_modules/tera-data/map/protocol.367081.map": "6umzIkHJr5C+JmdGCmk58FyvF6hp3GSA8E2krAeu5dk=",
+		"node_modules/tera-data/map/protocol.367405.map": "XjuasY9J+GSSBc/Mc2afWXoxFcnzQT6ugLJdE4adGSs=",
+		"node_modules/tera-data/map/protocol.367406.map": "/Wrt4LRqmZzYJoXzQT2etFtJgFnTk1CDm4kyYJbgMUw=",
 		"node_modules/tera-data/map/sysmsg.27.map": "MZBjCaGL4i5JEtndLot2NdOrsoJ9UvM6mbwgskJQ/GE=",
-		"node_modules/tera-data/map/sysmsg.86.map": "5azqFqWPlXA+DDGmnHbYE5BXcedpAnbT0xcvObxo3cM=",
-		"node_modules/tera-data/map/sysmsg.87.map": "40W55D6+KDfXd3rAuD9aghLQJNjv+P4Pn620SZhf8gs=",
-		"node_modules/tera-data/map/sysmsg.88.map": "rzDlLEyM0Pn3DGGFQI/qeOMX/6IBTFcw6l5NhXG2kWM=",
-		"node_modules/tera-data/map/sysmsg.90.map": "KQBHIGZzKCIMF9CBuSTW5Ursv/JLVtheJ0+FhrHX/hs=",
-		"node_modules/tera-data/map/sysmsg.91.map": "kDQuy/zjJkAKZwhX+HsxqUz1wfTN2fK+SlGEBZE5zkg=",
 		"node_modules/tera-data/map/sysmsg.92.map": "FKVm2fY72YvwMKfoFjiIiDbcZBM04ZqCU6nbouNi6q4=",
+		"node_modules/tera-data/map/sysmsg.93.map": "D7NgTkeQQ106LwgEGhn4lyLQn+uH9keiPoihD21RRjM=",
 		"node_modules/tera-data/package.json": "6szRBOjdIGy1Esoc8Srna0mef8vP8LETWZEdEtlWhwQ=",
 		"node_modules/tera-data/protocol/C_ACCEPT_CONTRACT.1.def": "YElAxO4X2mV8JjItFENPXqusvV02opc+I7KW7UeD+TQ=",
 		"node_modules/tera-data/protocol/C_ACCEPT_FRIEND.1.def": "iihg/ooN9iqytfooGA8DMiRCHLyoXE2YnSlA4KXQoEo=",
@@ -1092,6 +1085,7 @@
 		"node_modules/tera-data/protocol/S_PLAYER_STAT_UPDATE.11.def": "Ja6bROWhcBlUvVS+JFYMkcs+Zn9E82K7jolvqvJv03g=",
 		"node_modules/tera-data/protocol/S_PLAYER_STAT_UPDATE.12.def": "uX+lztEh5fWI9aurxoCA955V+haU1IHkcJ2sX51DJYc=",
 		"node_modules/tera-data/protocol/S_PLAYER_STAT_UPDATE.13.def": "RlYrlXuZblxARWYTvs7Hq1BmSlmhaWT56HBF9oNunz8=",
+		"node_modules/tera-data/protocol/S_PLAYER_STAT_UPDATE.14.def": "L1jHpW2lmr1asVALEPRKoVaYpdaiMsjtlb4eaofOg6M=",
 		"node_modules/tera-data/protocol/S_PLAYER_STAT_UPDATE.7.def": "IB79z5FSnUhpFhb7sBHDavXkwi+fdc4tEJNABZuVHew=",
 		"node_modules/tera-data/protocol/S_PLAYER_STAT_UPDATE.8.def": "tq9hByaKtU0lxS1NRwwL0AwKiYdmXw2xzGsyR8QPXws=",
 		"node_modules/tera-data/protocol/S_PLAYER_STAT_UPDATE.9.def": "8USRYMMKGyChxsqE7UzwYs2SD7Gt77/x/U8wTeCy46I=",
@@ -1181,6 +1175,7 @@
 		"node_modules/tera-data/protocol/S_RESULT_ENCHANT.1.def": "YjRpWGDV7EAYT6qIueBOQN0cLchi6gOLwFsiz2mFsSU=",
 		"node_modules/tera-data/protocol/S_RESULT_ENCHANT.2.def": "f1aBf88P4ZuSHiAP9uEyGch92eNR9F/4R37Vl+3ElVY=",
 		"node_modules/tera-data/protocol/S_RESULT_EVENT_SEED.1.def": "ziOuM2tJOeLpePTyp+SVHt5Qu5BVwyUpK/1ztosHBHo=",
+		"node_modules/tera-data/protocol/S_RESULT_EVENT_SEED.2.def": "/kaK45W+cRyrzIRIAQ+wREeFtphGg4l90kKBgcYawjw=",
 		"node_modules/tera-data/protocol/S_RESULT_INGAME_CHANGE_USER_APPEARANCE.1.def": "7MgKLE9UkuH6sP/3UbFKljeFXQCrrhu/DT5kXNdiH/U=",
 		"node_modules/tera-data/protocol/S_RESULT_ITEM_BIDDING.1.def": "fNqj5yROxwkXEsBUel11sHcmUTYA4LZNs0trVYJ2kmA=",
 		"node_modules/tera-data/protocol/S_RESULT_OPEN_DUAL_OPTION.1.def": "xlMUal8m3dsDFY3JXsWTuk+8GjoxGCOoeI8MLDZbdoU=",
@@ -1251,6 +1246,7 @@
 		"node_modules/tera-data/protocol/S_SPAWN_DROPITEM.7.def": "essNSTwxZO61/JwXZyr9eFKzpl9ppdKbK3CoM6akPw4=",
 		"node_modules/tera-data/protocol/S_SPAWN_DROPITEM.8.def": "vPJ+8nCv7/5Op8IVkdKA/n7SqMuz/7OZPHDGOKac76Y=",
 		"node_modules/tera-data/protocol/S_SPAWN_EVENT_SEED.1.def": "wEx/FoS2iaZS//HlfyoIjImAZDkdFhDG+QDlo3kXH+8=",
+		"node_modules/tera-data/protocol/S_SPAWN_EVENT_SEED.2.def": "wwRKK2bAilcX5FMmWmvSqEr5LoV57vtcTq1FYgdH6Sw=",
 		"node_modules/tera-data/protocol/S_SPAWN_ME.1.def": "e/CLfoVliE9+AI3L4ddvSte5a+Nb/puPJe1g0U2o08k=",
 		"node_modules/tera-data/protocol/S_SPAWN_ME.2.def": "kbGDr2893+dq0JQ63uEZb63GnffuutjDUotJ/9UhnKo=",
 		"node_modules/tera-data/protocol/S_SPAWN_ME.3.def": "99OV48M16JaARTHN3/QXFCAmrFpeT2YD/3t3q0/f3cE=",
@@ -1354,6 +1350,7 @@
 		"node_modules/tera-data/protocol/S_UPDATE_BIDDING_COUNT.1.def": "k7Od+AupGddXtuRdhVQUYyADAt6XsIqmtFdorkcyed8=",
 		"node_modules/tera-data/protocol/S_UPDATE_CONTENTS_ON_OFF.2.def": "HC1BVyD+454+q1pPmfLDdKHS6/fFcJaSKwnLq+TpUWM=",
 		"node_modules/tera-data/protocol/S_UPDATE_EVENT_SEED_STATE.3.def": "lQVmExwCKEpMy6YfJXUCmfOsg134jXLr1p/pXwC1hRs=",
+		"node_modules/tera-data/protocol/S_UPDATE_EVENT_SEED_STATE.4.def": "tzJOs1wjQa61eQezpJig2rS6Gg+qIhAqbWnN+5lP23E=",
 		"node_modules/tera-data/protocol/S_UPDATE_FRIENDSHIP_GAGE.1.def": "BnxNNUF/GyY721GIuhIZ0X51Zn1RXkZfI5lO1euqc/A=",
 		"node_modules/tera-data/protocol/S_UPDATE_FRIEND_INFO.1.def": "zmKPfdgLe3Hd8lk6/IjAJNcK8ysLpJdBPEfHjf6difs=",
 		"node_modules/tera-data/protocol/S_UPDATE_GUILD_ANNOUNCE.1.def": "4bUex89x+eL4I2+kBq2iFCEMW/mqSsEeJSnCGcrh780=",
@@ -1419,7 +1416,7 @@
 		"node_modules/tera-data/protocol/S_WHISPER.2.def": "iE3d/DaIs1qF0KgU8JrG1/lUZIRMVx8mEMCb57R8wiA=",
 		"node_modules/tera-data/protocol/S_WHISPER.3.def": "qJOA6SRspT5OuXexQLgTnbiJ6KIO3pAEjHnLvNIgV6M=",
 		"node_modules/tera-data/protocol/S_WORLD_QUEST_VILLAGER_INFO.1.def": "+QL8uw5ysSz0+0NL+VnYnNP4R4e4jfacjNoPcn6CRpU=",
-		"node_modules/tera-data/revisions.json": "XnqSh8oVFpNRaX+GpRVaCy0CQcxayErkOLw2sWzezNw=",
+		"node_modules/tera-data/revisions.json": "WmYPpUyghkw16YVdTczzfpkK3zsnZaPrRrUYr2KP+so=",
 		"node_modules/tera-data-parser/index.js": "cstD174uZ7uso51xXY6uuOtPjAeesjs2VX51a9r40ss=",
 		"node_modules/tera-data-parser/logger.js": "u6i44GWYnuAjLvYREZChU/609eQ6OPoHvwfPs8FO0Zs=",
 		"node_modules/tera-data-parser/node_modules/tera-vec3/README.md": "b37gX1W4iSHkiLrDFkl6FUftM07jKzNrzx5XdKjrdbw=",
@@ -1430,7 +1427,8 @@
 		"node_modules/tera-data-parser/parsers/enum.js": "IHPT6L7afkAIIvNpMgC4mFVzSVTgGJwYelHIt9o4BNk=",
 		"node_modules/tera-data-parser/parsers/proto-tera.js": "/h282p6yTIHTpuCnuGW1w+tGFozHshVKKZjy6QhSTkY=",
 		"node_modules/tera-data-parser/parsers/proto.js": "IO9r0pjAXnW85+tb2wYtVFX5tsMDsSuHJYW6ZnoLb3g=",
-		"node_modules/tera-data-parser/protocol.js": "IscoNpqYqwnWxiFzeXrPKfv0aVTnrwiaYZimsfBbG4E=",
+		"node_modules/tera-data-parser/proto/tera.js": "Gdkwdgg0+30K9hfVsVQw27UcaCITlzNoDmorqwVSboY=",
+		"node_modules/tera-data-parser/protocol.js": "BYITdj/NfSWFJ7DMiu1avQfzdWwBlH4md54Rwmo6HOI=",
 		"node_modules/tera-data-parser/types/customize.js": "+Q/CC3AmI4SutfIVuWHnV9tqIATHddyVYxIAoi70i9Y=",
 		"node_modules/tera-data-parser/types/index.js": "/TrIPW9kegnH5+hL4fYNyID/Qs05D8sNuYN33bKIbrg=",
 		"node_modules/tera-data-parser/types/skillid.js": "PWcyh+f6pX7dypUhBvwtrV/I8uw8Anh4pHSHiBywLO8=",
@@ -1438,9 +1436,9 @@
 		"node_modules/tera-proxy-game/clients/RealClient.js": "CaNIwr3438EX8bq7QkYp6DqqA9s+DwLCZJTyTOHKF90=",
 		"node_modules/tera-proxy-game/compat.js": "LnlGIlZWHrwnrH5yOlmcRS8EiJgRFsX4WsVfXb+LaQ0=",
 		"node_modules/tera-proxy-game/connection/dispatch/hotswap.js": "YnvlsyGP7s7KxFvDP2CJGvXxL1el+IYCpmeaVukSN+I=",
-		"node_modules/tera-proxy-game/connection/dispatch/index.js": "PhwWiDcMfhdJyGpRkbvVk/uzWr7E+/MGThSqUpDd1oI=",
+		"node_modules/tera-proxy-game/connection/dispatch/index.js": "DuiPtYJ0wdWf8gC0UJ4brwbhiKfATUd1cjBzZHy8Mio=",
 		"node_modules/tera-proxy-game/connection/dispatch/settings.js": "9mIo0xgs8LfYhBv0hyFY3BkMlkZER0q4v+T3JRNp1tI=",
-		"node_modules/tera-proxy-game/connection/dispatch/wrapper.js": "opwB+nfKL5mHNL0tj8nyhZAu+X+3zpPX9dHQMiKt4pg=",
+		"node_modules/tera-proxy-game/connection/dispatch/wrapper.js": "4W5LkK0UCzi7GxfNGLjZ/0JFwmiCN1SKGGnZHcBbka8=",
 		"node_modules/tera-proxy-game/connection/encryption/index.js": "6MxG3SaEb21gJ+D+V2Vemp2gcO+VtZq6fhBHupO44s0=",
 		"node_modules/tera-proxy-game/connection/encryption/sha0.js": "jbEvFmWtKWlI6bw3BxUjxYZMAP6OMt8Af2HIpO37oRw=",
 		"node_modules/tera-proxy-game/connection/index.js": "zEuRW+tgs3z0InT8cJ8sMdHFtu4SrfR+bSYi703M5RQ=",
@@ -1482,11 +1480,12 @@
 		"node_modules/tera-proxy-game/node_modules/tera-crypto/bin/79_arm_linux.node": "KjraG0aymQKYncnkgx3QjXZ2xxc+WCs+9sb0uRQPDDc=",
 		"node_modules/tera-proxy-game/node_modules/tera-crypto/bin/79_ia32_win32.node": "JEBZrCanW7k3+CgySX2AVc/W22dGZ9x9+dlv0vs1GMc=",
 		"node_modules/tera-proxy-game/node_modules/tera-crypto/bin/79_x64_linux.node": "x+VPvjnErwDbk5BE7if07C7usu3FajyFzjNDr68REgc=",
-		"node_modules/tera-proxy-game/node_modules/tera-crypto/bin/79_x64_win32.node": "NguFaNP1uLr9kueqTXbiZL9nBrvt6ESU8KMLqdcPTjs=",
+		"node_modules/tera-proxy-game/node_modules/tera-crypto/bin/79_x64_win32.node": "cCHURNWbb5hOu2wJHZDHrCG6E95qz09on3xaAAw0g9o=",
 		"node_modules/tera-proxy-game/node_modules/tera-crypto/binding.gyp": "/Q/6P+vfZdKAqSyWVyhSOG+EZmxIgJpEJu3LXscCPv0=",
 		"node_modules/tera-proxy-game/node_modules/tera-crypto/index.js": "lhtwDot8dlzN8cvsNQ7gi1DaqgGOSzTxG1sxSHfKjGo=",
-		"node_modules/tera-proxy-game/node_modules/tera-crypto/main.cpp": "fdeqQB2ccv8pDjw+o1+ceLjvczNbK3A8iB+lq3BjzQI=",
+		"node_modules/tera-proxy-game/node_modules/tera-crypto/main.cpp": "F6NITgFc7p23a500w8qF1Zc5peuLOSicKpgdMoXgg5E=",
 		"node_modules/tera-proxy-game/node_modules/tera-crypto/package.json": "suz0VSdXi+l66aBvkroN8vlU44c/1m/UBJWztmRBXIw=",
+		"node_modules/tera-proxy-game/node_modules/tera-crypto/packet-integrity.js": "XpmxqCQG2qkWdO2frBhv6xEozCNVrbWRQgVrVw4Edek=",
 		"node_modules/tera-proxy-game/node_modules/yauzl/LICENSE": "swN4PV63ylC4U/+l8UXk55mPqzOYMdhI9QfKbNlwV3o=",
 		"node_modules/tera-proxy-game/node_modules/yauzl/README.md": "jfkq+x6Oo8dUZy6RlpNWlXNQXoUDzTOXLUluSijYmrw=",
 		"node_modules/tera-proxy-game/node_modules/yauzl/index.js": "WDxFVHGMuu5RidDijb10gKB2bnhTBOO80qytgLLLZJc=",
