--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
 		"bin/cli/versions.json": "ZtOb4FBj8++D7SdsLsV0ojZURn8zwogreQdAqWb08us=",
 		"bin/configurator.js": "rRlv199GEpTwecKfFN0FewT8vbpj3P0u4pfOQtxsgV4=",
 		"bin/genmanifest.js": "RmnAlNEf7Mitl31MB9UQ4lFt6u3AG3BzGYpVwfpY3WY=",
+		"genmanifest.js": "RmnAlNEf7Mitl31MB9UQ4lFt6u3AG3BzGYpVwfpY3WY=",
 		"node_modules/hexy/.gitignore": "9s8/9y0tJEyuFqG71gEapN0hQfXlMvQeSHRRwUNwQRc=",
 		"node_modules/hexy/.travis.yml": "9GMRX4yteNos1+kEJC3cmDnCfK0GiwLvzHurU8Sgje8=",
 		"node_modules/hexy/LICENSE": "K2MwYBwToHVMLEZp4BAXsqW1oSLg+Pj1QjrCJmRxA/8=",
@@ -1428,7 +1429,7 @@
 		"node_modules/tera-data-parser/parsers/proto-tera.js": "/h282p6yTIHTpuCnuGW1w+tGFozHshVKKZjy6QhSTkY=",
 		"node_modules/tera-data-parser/parsers/proto.js": "IO9r0pjAXnW85+tb2wYtVFX5tsMDsSuHJYW6ZnoLb3g=",
 		"node_modules/tera-data-parser/proto/tera.js": "Gdkwdgg0+30K9hfVsVQw27UcaCITlzNoDmorqwVSboY=",
-		"node_modules/tera-data-parser/protocol.js": "BYITdj/NfSWFJ7DMiu1avQfzdWwBlH4md54Rwmo6HOI=",
+		"node_modules/tera-data-parser/protocol.js": "4a5vXx7S0q+bPxXUmoM6YIBmEymamGaHuvzeWdPLi9I=",
 		"node_modules/tera-data-parser/types/customize.js": "+Q/CC3AmI4SutfIVuWHnV9tqIATHddyVYxIAoi70i9Y=",
 		"node_modules/tera-data-parser/types/index.js": "/TrIPW9kegnH5+hL4fYNyID/Qs05D8sNuYN33bKIbrg=",
 		"node_modules/tera-data-parser/types/skillid.js": "PWcyh+f6pX7dypUhBvwtrV/I8uw8Anh4pHSHiBywLO8=",
