--- a/manifest.json
+++ b/manifest.json
@@ -212,6 +212,7 @@
 		"node_modules/tera-data/protocol/C_CAN_LOCKON_TARGET.3.def": "X722x/1y4lP/X8N3O9KyH7//iFO0RVSSKCdOYAuJhU0=",
 		"node_modules/tera-data/protocol/C_CAST_FISHING_ROD.1.def": "HxmX2ttKB1qGu6a187f/i6cQ+uw8DSMjJ2Cup6g9lGM=",
 		"node_modules/tera-data/protocol/C_CAST_FISHING_ROD.2.def": "0XU3bUIAWar1VnQAy8vxsXQ+x9SIUd5cF9aDcJmiM4s=",
+		"node_modules/tera-data/protocol/C_CAST_FISHING_ROD.3.def": "5Cf9sUST5t1SMoeqXRZ/D2wYTNNbiEL6zy/w6xpfMJc=",
 		"node_modules/tera-data/protocol/C_CHANGE_EQUIP_PRESET.1.def": "9kAFt8qXRVWjalrRzm1pPBkZVm52FXwTdhWrYVIfHbI=",
 		"node_modules/tera-data/protocol/C_CHANGE_EQUIP_PRESET.1.js": "rfjK2mk1xPRxFUojyKK+b7QZ0qpprHbBMnRZ24WTAF8=",
 		"node_modules/tera-data/protocol/C_CHANGE_GUILDGROUP.1.def": "L9t2UwBBZlBjINGCI/PP1WU34/MtPaD8fFwT8THSZ04=",
@@ -287,6 +288,7 @@
 		"node_modules/tera-data/protocol/C_END_CLIMBING.2.def": "l8Yk8SjwBWMVrrtcfM9xc9m9q59v3sNSpeJjQOQc9Js=",
 		"node_modules/tera-data/protocol/C_END_FISHING_MINIGAME.1.def": "biCAbMGFLRepAZsTtMZLFTjFMAofVicZK2KM8R0X3DQ=",
 		"node_modules/tera-data/protocol/C_END_FISHING_MINIGAME.2.def": "68cYg0KWLpzf2k4mfzNsH0mUjkNvFj49XwYh3WjPZ8w=",
+		"node_modules/tera-data/protocol/C_END_FISHING_MINIGAME.3.def": "biCAbMGFLRepAZsTtMZLFTjFMAofVicZK2KM8R0X3DQ=",
 		"node_modules/tera-data/protocol/C_END_MOVIE.1.def": "qZV1VC5Zbm2AgE/NHR1lZKhT9ZMA8mEDOzDTmutSTts=",
 		"node_modules/tera-data/protocol/C_ENTER_BATTLE_FIELD.1.def": "47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=",
 		"node_modules/tera-data/protocol/C_ENTER_SCENARIO_DUNGEON.1.def": "f8/+UXnTx3xecwxDJ2rLMDhzk2XX0ec2v6Ca4XXXEAE=",
@@ -517,6 +519,7 @@
 		"node_modules/tera-data/protocol/C_START_EVOLUTION.1.def": "z1o5jDCpnmX2WQP1LLB2tJOYbLbJSSAy0xvpkUjBSAg=",
 		"node_modules/tera-data/protocol/C_START_FISHING_MINIGAME.1.def": "47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=",
 		"node_modules/tera-data/protocol/C_START_FISHING_MINIGAME.2.def": "hhMC6nClsNSClFew2K6Jn0/CD7/YngcC3DeZLHbsvyA=",
+		"node_modules/tera-data/protocol/C_START_FISHING_MINIGAME.3.def": "47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=",
 		"node_modules/tera-data/protocol/C_START_INSTANCE_SKILL.5.classic.def": "2GskM3b1ZTqIzaEpDaQTWbvSC+/axfj5VcFJ2PZymhw=",
 		"node_modules/tera-data/protocol/C_START_INSTANCE_SKILL.5.def": "PKMyWN/rATlQ1lLNV7itTCTD511S0C54dbT3cYnlcoU=",
 		"node_modules/tera-data/protocol/C_START_INSTANCE_SKILL.6.classic.def": "j7K+PSsSLdFpJubl7Y5yDTiR40vDgpuchQc0NAS/O5Q=",
