--- a/manifest.json
+++ b/manifest.json
@@ -103,7 +103,6 @@
 		"node_modules/tera-auth-ticket/node_modules/debug/src/debug.js": "wt9TGc+HaNG7ZPmfdOfcFBiKlFWyBQm5qMS9EmorXk4=",
 		"node_modules/tera-auth-ticket/node_modules/debug/src/index.js": "J6NAuyOGWy7ucF1/3AAFOK0mZFZL/SFI8wzFkhzrci4=",
 		"node_modules/tera-auth-ticket/node_modules/debug/src/node.js": "I6H5g1FVRM2zhuHBdgXsRxc5mslcG+nY8ctbLBFqFJQ=",
-		"node_modules/tera-auth-ticket/node_modules/fast-json-stable-stringify/.npmignore": "kR4Aol4NMVrOqgwRdD2rqcuWu2SUaDGwOz0PwowC6LU=",
 		"node_modules/tera-auth-ticket/node_modules/follow-redirects/LICENSE": "v6ilS7lSzNp58PGIlyHRCPW2Bbq7srijcF/7UvQTLrc=",
 		"node_modules/tera-auth-ticket/node_modules/follow-redirects/README.md": "KGpPqFovzqJ+kqstaeXZ/oe6Ibwj2eHX0Uc3b6+3nCQ=",
 		"node_modules/tera-auth-ticket/node_modules/follow-redirects/http.js": "dUwAeMV2Jdt7VbTD+zD/XCB/xJKEpQInQugdDFlUA8U=",
@@ -142,6 +141,26 @@
 		"node_modules/tera-auth-ticket/node_modules/punycode/package.json": "QM3p/rtR4xrGn0Yn9iyK/wpp42M4eK8+YV6PYc0GvVU=",
 		"node_modules/tera-auth-ticket/node_modules/punycode/punycode.es6.js": "WPM2H1Kk5cxjrKSRYy64ApOFOzkp31XBYci6UmuFiqA=",
 		"node_modules/tera-auth-ticket/node_modules/punycode/punycode.js": "3w2JCtM6Iy+7x/LZV+E0GlKDDQ4RRYaoD2DM7YCKvgQ=",
+		"node_modules/tera-auth-ticket/node_modules/qs/.editorconfig": "3LJw660Lv9YUPKt/TkFs3ktOJyO/QcVlf+eGC+m8S+Q=",
+		"node_modules/tera-auth-ticket/node_modules/qs/.eslintignore": "4DP7bKmG57VyRcRACTOwTM25Ljz3io5tKMdgz0fQfXY=",
+		"node_modules/tera-auth-ticket/node_modules/qs/.eslintrc": "ELlpgk0XA/bsjsb790pYfLkz5ujbUz4GrfqEHZy3eJ0=",
+		"node_modules/tera-auth-ticket/node_modules/qs/.github/FUNDING.yml": "NntdVF16ZmhIle5+/ZhxMOgwGEkaey9y8lwLBiFXrZA=",
+		"node_modules/tera-auth-ticket/node_modules/qs/.github/workflows/rebase.yml": "PsOFqzoacJX0rbK19amgZnB12aCNt5Cfxd8/rCGG+T4=",
+		"node_modules/tera-auth-ticket/node_modules/qs/CHANGELOG.md": "ALxONIi2WLjVMF7tRVKJw7kYtROd5cOU5ZF/RxEovwk=",
+		"node_modules/tera-auth-ticket/node_modules/qs/LICENSE.md": "59w3v2Ytf3hu/LRsVFYV5wwdr0WKODhVIcY89mB83+E=",
+		"node_modules/tera-auth-ticket/node_modules/qs/README.md": "fSTVVkuLQ0uv5vnoh5VADzDCzVOb/OYIjUPhf4DdmaQ=",
+		"node_modules/tera-auth-ticket/node_modules/qs/dist/qs.js": "XNCs31CRX1H2/fMo1nirAAatEzPFIaP8TOTsB3dZjL4=",
+		"node_modules/tera-auth-ticket/node_modules/qs/lib/formats.js": "ZgNTox72S0vgUbhZVJFVJCPDYewP12TYBM6hw+BqVao=",
+		"node_modules/tera-auth-ticket/node_modules/qs/lib/index.js": "j04C7vbMxD8rdEjBiuIJKByOmvmAfK1JHfZ0UOOBepU=",
+		"node_modules/tera-auth-ticket/node_modules/qs/lib/parse.js": "COPk7ijlKiiEQRCqgYOOhdNY41Zqm/AK8s1KsUn79n4=",
+		"node_modules/tera-auth-ticket/node_modules/qs/lib/stringify.js": "UtlrhYwy8W6e5Ii+ULAkQhbsbO3iEF4ZLhsEAHVgyds=",
+		"node_modules/tera-auth-ticket/node_modules/qs/lib/utils.js": "PLt/ru2u+c6Awy0QPBObU62FqXo+Oi0JayfdswpPfKY=",
+		"node_modules/tera-auth-ticket/node_modules/qs/package.json": "2vWkIS0ZJYqES0X3gQA8P4mXLxp7AKT5YLYA45WBiX8=",
+		"node_modules/tera-auth-ticket/node_modules/qs/test/.eslintrc": "5vxnprkuJ6hUeBJoUJ3EGLW7uOfOJ+ote6tHzkofYM0=",
+		"node_modules/tera-auth-ticket/node_modules/qs/test/index.js": "2BDKRznMYIds6P5cp1W0eM9owEAM9/5lGBaSMKapT14=",
+		"node_modules/tera-auth-ticket/node_modules/qs/test/parse.js": "cu/AEvDh4Byx5OhNskXssOIpLtiAo7yRUFdHzLIS3+I=",
+		"node_modules/tera-auth-ticket/node_modules/qs/test/stringify.js": "uGSLxAc5Xx1EMvzTOmQHB4thfcd3kMOi+TllkhmazWk=",
+		"node_modules/tera-auth-ticket/node_modules/qs/test/utils.js": "StvSVBa6D3XOevr29xqkMLKqkY/Wl/fpeLRRx213BxQ=",
 		"node_modules/tera-auth-ticket/node_modules/tough-cookie/LICENSE": "IuxnkckbpCwFFqBfTL3eAZquRof4o4xcp+imnuaPhR0=",
 		"node_modules/tera-auth-ticket/node_modules/tough-cookie/README.md": "8GCHfWSvoNUfuYtXtglP0xRLhj9yzOp+E8eCziEl338=",
 		"node_modules/tera-auth-ticket/node_modules/tough-cookie/lib/cookie.js": "Grrp3pX1x/2RIgDbEn3SWlGG73V8VtBeYyBGd2pBLrU=",
@@ -152,8 +171,8 @@
 		"node_modules/tera-auth-ticket/node_modules/tough-cookie/lib/store.js": "jxloXrJmgCA7WVKEhWJr+cU7wxqGW9P5h0kH7rOCsp4=",
 		"node_modules/tera-auth-ticket/node_modules/tough-cookie/lib/version.js": "G6dzCy4TKpS9A89uHYboMxDX4DxNtygKF7CjgcESrDI=",
 		"node_modules/tera-auth-ticket/node_modules/tough-cookie/package.json": "8Zsc3p7UB5124G1bqv70nduVR/3qkyTTBnPTQuLELYY=",
-		"node_modules/tera-auth-ticket/package-lock.json": "RjsdgCM60aUavqETycqTgLESuncY6JXT0IaHcxGnu8o=",
-		"node_modules/tera-auth-ticket/package.json": "FQsA0A+XEC7al++5CaIcue4e4Po0XXGs8AspQQ5NUYc=",
+		"node_modules/tera-auth-ticket/package-lock.json": "CBf21OhK+gbOxaLHr8+6kw3+y9dAQrQAEaDIjyV5QqU=",
+		"node_modules/tera-auth-ticket/package.json": "mP2KwY+v35XOFbFQXUcN4W474hsSIEofKZraaXp1cwo=",
 		"node_modules/tera-auth-ticket/regions/eu.js": "ixFKtV4vXhbvOVCYfPq+Y47RbHNvDNV0KPlEgJmJnog=",
 		"node_modules/tera-auth-ticket/regions/na.js": "MKcTYu2QDWm5jMIgsSbktFzemFzxEC5tWpHrypqG8IM=",
 		"node_modules/tera-auth-ticket/regions/ru.js": "5LC032pJGitSJwJlr4XsU5jZ2aNyTjlpux2rihw8W5o=",
