--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 		"bin/cli/clientConnection.js": "zb9lvb5WGJiYA2WV5jbc5RTRAjbQpJ4LfaDLwmtHG44=",
 		"bin/cli/index.js": "BUoIABrhCTMWezwDW2iuaj6ctU35qPsMaFnSO9OIrLc=",
 		"bin/cli/servers.json": "a366eKZOen5hUjoFvOjd0cPiBECmyVhXCddqXG3Iuqg=",
-		"bin/cli/versions.json": "WqmoUSHKJjECEeH+L/hP4635jdCZJ7mTYfx/tgCQ9cM=",
+		"bin/cli/versions.json": "FepR7BghJ40xdbL47zvGz7Nv2vqpxD5YZ2Elc+Wef68=",
 		"bin/configurator.js": "rRlv199GEpTwecKfFN0FewT8vbpj3P0u4pfOQtxsgV4=",
 		"bin/genmanifest.js": "mhaoo2lnPGrATQLvuQFOzKrKF2c6wXeHpcFZsLmOKc0=",
 		"bin/node.exe": "Wu/hSXOj7XKtp8/F6PNYx3sbHghNJb1SdnyD06Wa8II=",
@@ -2788,6 +2788,7 @@
 		"node_modules/tera-data/integrity/92.json": "ZHqrSuiJydsWNrlMK6itkXubbbJ5qbKT57wQ8q+bcAw=",
 		"node_modules/tera-data/integrity/93.json": "Y0+M2Ta7lSQKqhFOczs6Xo93tXRby/XnyFD+XWqPYmE=",
 		"node_modules/tera-data/integrity/95.json": "Y0+M2Ta7lSQKqhFOczs6Xo93tXRby/XnyFD+XWqPYmE=",
+		"node_modules/tera-data/integrity/97.json": "Y0+M2Ta7lSQKqhFOczs6Xo93tXRby/XnyFD+XWqPYmE=",
 		"node_modules/tera-data/map/protocol.343506.map": "vxVWPTNYwDy40WdCksZ79Vc3tE2Rgt+ycyjULtk1X2Y=",
 		"node_modules/tera-data/map/protocol.367407.map": "ZriYkMosaLje8xvLlOep4IHmPjF/D8dPadbWyZ3+Z/c=",
 		"node_modules/tera-data/map/protocol.368189.map": "zU0PAmh4xWafltJJDnEEEqk0mo4qRlz2rjgUYsUbv1E=",
@@ -2795,10 +2796,12 @@
 		"node_modules/tera-data/map/protocol.369050.map": "+4vdJrJnDngTBC015HMcF7XmMBXViG2VhH0y96P5npc=",
 		"node_modules/tera-data/map/protocol.370134.map": "zElPbDroV55Ubys2yGPa2KWdkhecPYVwztfnqlXXeZA=",
 		"node_modules/tera-data/map/protocol.371541.map": "fhYhBwZr9gvCZnXYCUYyxWLBvu8XaPRDtMZw4xTH8m4=",
+		"node_modules/tera-data/map/protocol.372754.map": "SzNpaacJoOMKJUGDcZCKLkcoKAYRUVZH0vded+mvbng=",
 		"node_modules/tera-data/map/sysmsg.27.map": "MZBjCaGL4i5JEtndLot2NdOrsoJ9UvM6mbwgskJQ/GE=",
 		"node_modules/tera-data/map/sysmsg.92.map": "FKVm2fY72YvwMKfoFjiIiDbcZBM04ZqCU6nbouNi6q4=",
 		"node_modules/tera-data/map/sysmsg.93.map": "D7NgTkeQQ106LwgEGhn4lyLQn+uH9keiPoihD21RRjM=",
 		"node_modules/tera-data/map/sysmsg.95.map": "ZlTIfLlz9BAayfvnJFsA4sui0cAifbprQ7ixSfUlAAc=",
+		"node_modules/tera-data/map/sysmsg.97.map": "15FFAESj27rv113ZGsDlJGSWeRVKTKVtC90DZ+kqHh8=",
 		"node_modules/tera-data/package.json": "6szRBOjdIGy1Esoc8Srna0mef8vP8LETWZEdEtlWhwQ=",
 		"node_modules/tera-data/protocol/C_ACCEPT_CONTRACT.1.def": "YElAxO4X2mV8JjItFENPXqusvV02opc+I7KW7UeD+TQ=",
 		"node_modules/tera-data/protocol/C_ACCEPT_FRIEND.1.def": "iihg/ooN9iqytfooGA8DMiRCHLyoXE2YnSlA4KXQoEo=",
@@ -4043,7 +4046,7 @@
 		"node_modules/tera-data/protocol/S_WHISPER.2.def": "iE3d/DaIs1qF0KgU8JrG1/lUZIRMVx8mEMCb57R8wiA=",
 		"node_modules/tera-data/protocol/S_WHISPER.3.def": "qJOA6SRspT5OuXexQLgTnbiJ6KIO3pAEjHnLvNIgV6M=",
 		"node_modules/tera-data/protocol/S_WORLD_QUEST_VILLAGER_INFO.1.def": "+QL8uw5ysSz0+0NL+VnYnNP4R4e4jfacjNoPcn6CRpU=",
-		"node_modules/tera-data/revisions.json": "Kds4ufj/Isj0cod8zXioa9LhqeuOHIopGPQyyAOcfao=",
+		"node_modules/tera-data/revisions.json": "/cOLB82/vCyQuTtxluEanBVgqsW18tmyiu5wfuCzIcM=",
 		"node_modules/tera-data-parser/index.js": "cstD174uZ7uso51xXY6uuOtPjAeesjs2VX51a9r40ss=",
 		"node_modules/tera-data-parser/logger.js": "u6i44GWYnuAjLvYREZChU/609eQ6OPoHvwfPs8FO0Zs=",
 		"node_modules/tera-data-parser/node_modules/tera-vec3/README.md": "b37gX1W4iSHkiLrDFkl6FUftM07jKzNrzx5XdKjrdbw=",
