--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 		"Json.dll": "7za9Si5b8XKTzg0y0vJ6jP5YxY3kgISGXUu0bOte5IU=",
 		"README.md": "1SFjnNxqAKGzQ8ROTamG4q00sK6ADA7lCaQU1frUgt4=",
 		"TeraClient.bat": "j8o6EUYPQBNdqZxUmc80Hynkm/4gOj2qkU1vvPtFAiw=",
-		"bin/cli/clientConnection.js": "zb9lvb5WGJiYA2WV5jbc5RTRAjbQpJ4LfaDLwmtHG44=",
+		"bin/cli/clientConnection.js": "jucbbrv8jvkbH9oOE8qVSze8RzeCvE4JmX7fKPzF0CM=",
 		"bin/cli/index.js": "BUoIABrhCTMWezwDW2iuaj6ctU35qPsMaFnSO9OIrLc=",
 		"bin/cli/servers.json": "a366eKZOen5hUjoFvOjd0cPiBECmyVhXCddqXG3Iuqg=",
 		"bin/cli/versions.json": "FepR7BghJ40xdbL47zvGz7Nv2vqpxD5YZ2Elc+Wef68=",
@@ -27,6 +27,10 @@
 		"node_modules/log/index.js": "Nsk6c/EDJu3Pvjzutk37pg3MdslqU74MktmySOEcv20=",
 		"node_modules/log/package.json": "lcGzUW5dKL/CUzBumgC+YbHlyyp2WCXECXbQ5CFl4YY=",
 		"node_modules/long.js": "8zWFtBUZ+LvtfC57Qj63CyLZ+M9RkbAxHbBW9vNkbwY=",
+		"node_modules/sax/LICENSE": "MJi+JxcIHP4riKD6oiHLTyMmcgy4zoaRmanWI08hkxk=",
+		"node_modules/sax/README.md": "RIosC/KYLwexqSyrjMNx3Lij12ABorLBOrTDG8w0lGA=",
+		"node_modules/sax/lib/sax.js": "+lNKnu+tv9zTX/szyCetSzQGlpmnlAFRaHngtW1tOCc=",
+		"node_modules/sax/package.json": "oXJKBBu258n8sIKCOOs9N/Ug06KV1sB4cTgj9qb0xEw=",
 		"node_modules/tera-auth-ticket/LICENSE": "cpLWo3UGUigxIoh72YDXtC/8h6Ase1hYWvCDCUDBnXA=",
 		"node_modules/tera-auth-ticket/README.md": "pV7SQCBDkHjXXZHJ2aUTtMkIS29jlmVGYSql/JCJnHs=",
 		"node_modules/tera-auth-ticket/index.js": "zohbidk+AXYqeWgZE/wuMtiXq5fZU0CCn+vuAScsIF8=",
@@ -4220,6 +4224,60 @@
 		"node_modules/tera-vec3.js": "tHokEIQEhIhWp9oLwUVZeH47soOLJkDFBSqFo8koYFU=",
 		"node_modules/updater/index.js": "Y/I2dp8OUHuQw9MxbvEJDHt0aNl/+HW2DQcgHwl9FvY=",
 		"node_modules/updater/package.json": "CilS25rKqWhEJmuv4crgxEpHa94pBhKHLWM3vRigQSE=",
+		"node_modules/xml2js/LICENSE": "xRRS7x39VgbJ/iZpMPpr9+ilNNUpc7ZHXfW/ISytWwo=",
+		"node_modules/xml2js/README.md": "kxbP6qEzobFmb2t1NwVFXU/ZYuEU40QIrToSaqdg+zk=",
+		"node_modules/xml2js/lib/bom.js": "HeR/6Q1nJjcJEgv6n6cKSkX9y/2gQKRaZqS7LsNXZLw=",
+		"node_modules/xml2js/lib/builder.js": "3aZ23SolbaOocBXJxrlEAHWKacgDBQrwQIeg90Qv6HM=",
+		"node_modules/xml2js/lib/defaults.js": "HKRSxIEVkl6hYw+axWQ8uSg4FL+VJ5ySiDc+vV0FZzE=",
+		"node_modules/xml2js/lib/parser.js": "TPfxNfDjtM4V68LtH/AGMrGkDCs2KswZp9iAD+LMRCg=",
+		"node_modules/xml2js/lib/processors.js": "kXs989J70nLgMM1yZ1Llm94yeXbNswKHf1l48yto3qo=",
+		"node_modules/xml2js/lib/xml2js.js": "CE1KBlIbcEDpen6zOmUJTlYtildmyA3Cuq/TuTap7QQ=",
+		"node_modules/xml2js/package.json": "RuBTHYceWVbx9GxJuzIgIajwK80qhL5YTb/NkmOKFAE=",
+		"node_modules/xmlbuilder/CHANGELOG.md": "9dJnpionLRaE9ZeimtqM9GxNkWpDzwkb/AXaaezIn48=",
+		"node_modules/xmlbuilder/LICENSE": "42i8QmO0Zs+YwiWvFeMAVJ4A2ohZQWpFNhCellTUNKg=",
+		"node_modules/xmlbuilder/README.md": "CsPirWnhfjFchollcZD2xEFswlCvmcVQcb8DlMYBfGY=",
+		"node_modules/xmlbuilder/appveyor.yml": "wWXLDUWzdKsOVpX1lUyecdS+/bgTGGIh+RDvAJtnoi0=",
+		"node_modules/xmlbuilder/lib/Derivation.js": "yNSTVPUS9k+2oQp17ymMCcAxa+hCSzV9xfAMNBO2Kg8=",
+		"node_modules/xmlbuilder/lib/DocumentPosition.js": "M+BNUre66GM7efIuMLf+18o11rU+6OMl6wmhYewLP+Q=",
+		"node_modules/xmlbuilder/lib/NodeType.js": "eXwZg4UqJG/FlNp3PXYdDk+d+ti2MClpbgoLpMaohsQ=",
+		"node_modules/xmlbuilder/lib/OperationType.js": "w/JgRQcw3hqWmv3U+ThEcQYfKx835aAaeFNyEQSHr1E=",
+		"node_modules/xmlbuilder/lib/Utility.js": "iQW8XSv49hvFCFvSGPyGHTChNGhxciVzxBVEPPMqqgU=",
+		"node_modules/xmlbuilder/lib/WriterState.js": "ursD4GvRsbmW4rMv5hqWHMogwQZ4NprNl44pNvnA564=",
+		"node_modules/xmlbuilder/lib/XMLAttribute.js": "dnsSTVJ03efkSKCL/74XUSWZzVRNIG6u8e7a9M1LyJs=",
+		"node_modules/xmlbuilder/lib/XMLCData.js": "a14ZSRTpN9iidynX/6BtBTWggR2SEZg3WvSH2mUYb+c=",
+		"node_modules/xmlbuilder/lib/XMLCharacterData.js": "5ljxRvtTibXlEzzqS0lwx50qB8vupPwm4ysDzwyZkzU=",
+		"node_modules/xmlbuilder/lib/XMLComment.js": "mLatcI38NInijmTK2Ei7dvSUpVa3xI7NaSV5pi+D91I=",
+		"node_modules/xmlbuilder/lib/XMLDOMConfiguration.js": "+eYUDE3H4YM4+OI0EXlNzmnT7d+MfcFLHcczGs8mZ/w=",
+		"node_modules/xmlbuilder/lib/XMLDOMErrorHandler.js": "/HqXraCx/xnmfOuee3ekwjqooqcsawAytxxydXcgSDc=",
+		"node_modules/xmlbuilder/lib/XMLDOMImplementation.js": "mhAjoatKb/iiHoq3FDq5IpojwYuYuoJdrYoT8knAfOg=",
+		"node_modules/xmlbuilder/lib/XMLDOMStringList.js": "/3xIIQLP/F+Z8XeyNvfPZ2GdBLY4TXqUKejk6h3aLTA=",
+		"node_modules/xmlbuilder/lib/XMLDTDAttList.js": "ZNgXgbejQdmhqv0vok81Y9BE/c9iPi0j0unzckrMaYw=",
+		"node_modules/xmlbuilder/lib/XMLDTDElement.js": "dNEwye9rAzfBImsAyXLJ9cFtXzumKZ+kOkgWXOoXr5c=",
+		"node_modules/xmlbuilder/lib/XMLDTDEntity.js": "QgO0Oka41h1pQ9onkVKRb6KCKgy28iLiQ+9EBBTn0C8=",
+		"node_modules/xmlbuilder/lib/XMLDTDNotation.js": "gWsXckTm1M6N1tL+A+JQb5cmuRBT0N3j6ZOaSEnBSrA=",
+		"node_modules/xmlbuilder/lib/XMLDeclaration.js": "UtUdyYZO7sucYoxwgFopDsGH9Jr9+8AMGDhCE7W+/Q8=",
+		"node_modules/xmlbuilder/lib/XMLDocType.js": "RGbX3JbaoP/z2sdRNKnEpAfuzvK8h5NjWzct2IzD7BY=",
+		"node_modules/xmlbuilder/lib/XMLDocument.js": "6MDQCtC/SP/iVK/Xp6JiCnwkdV2pNiedfpOT1aprYnA=",
+		"node_modules/xmlbuilder/lib/XMLDocumentCB.js": "ozYTS92wa55lxS6xVV+OoyhDAOkU3VEQqKWEprS8/V4=",
+		"node_modules/xmlbuilder/lib/XMLDocumentFragment.js": "9ONXedljBVp5P0aJcVtYV81WhfDUY8TLMFavGpEFwPg=",
+		"node_modules/xmlbuilder/lib/XMLDummy.js": "WvERU3J6BzE3K7k5deB1wfVUrR1rfPPcEXavVyEzyZo=",
+		"node_modules/xmlbuilder/lib/XMLElement.js": "NvxZ93fRJm7qCtXuQQMytLgmaxXyJwLR1lXJaV6WYYU=",
+		"node_modules/xmlbuilder/lib/XMLNamedNodeMap.js": "+oY1TC9U2l3ec92Og2KF/e77zCGNo9qspGp8nH77kjM=",
+		"node_modules/xmlbuilder/lib/XMLNode.js": "T+Hk5SnP4H8hO4vbE7UEVMPlgtiuhsIwygty+ceEYcY=",
+		"node_modules/xmlbuilder/lib/XMLNodeFilter.js": "GTLGjkVu5OAqB8EB+946MHTywE3gat9Aw9ALd1l1Z+o=",
+		"node_modules/xmlbuilder/lib/XMLNodeList.js": "qz2VNMWSrku94lqztrWb8K2u1Lm+QtBojlOAmPgM7nQ=",
+		"node_modules/xmlbuilder/lib/XMLProcessingInstruction.js": "ln+sA4ifkB4oDkgS1OYg/Rvg+z7PC7n67Iy9GjDKNQg=",
+		"node_modules/xmlbuilder/lib/XMLRaw.js": "WUVuy3j77Yry3znAkPRm312dhit4k8FfeO0yr4irwlA=",
+		"node_modules/xmlbuilder/lib/XMLStreamWriter.js": "nf1Gdn2xZI4REJtkxfyKwDoh0DBjyW6kcTMXqTvcT1w=",
+		"node_modules/xmlbuilder/lib/XMLStringWriter.js": "7yRFpLM/Ka/6ybx0Zs0j8/zSRMJr1Av3IcCvrAeD/Lg=",
+		"node_modules/xmlbuilder/lib/XMLStringifier.js": "HC9He9hnBrEFjODkraNpFqydVLwNRzIQksDwx0NsE3s=",
+		"node_modules/xmlbuilder/lib/XMLText.js": "r2MTJfJIDtk89ElDXpmpRg5Pw+WO3ArPrAFQjN5NPWY=",
+		"node_modules/xmlbuilder/lib/XMLTypeInfo.js": "XR8hNY7QY22UfaZTv2u2yHYqUk/iJZBROzlPnrtdIiU=",
+		"node_modules/xmlbuilder/lib/XMLUserDataHandler.js": "lg77lLx7aFiivM+7aS0hulg1kcKxWbmQ9i4IdicoQO8=",
+		"node_modules/xmlbuilder/lib/XMLWriterBase.js": "hb/F4EDFxkM79XVsfAk3wuNoVxtsMPzCdz5g/vGg9jE=",
+		"node_modules/xmlbuilder/lib/index.js": "TPlvlFA5vi0nrC60CvP0PujDf/UKvX/FKBwXOpjabb4=",
+		"node_modules/xmlbuilder/package.json": "jR1ccyBFw1rhNsckBZeRaiCF52TJ09tyuLKPAMHISfM=",
+		"node_modules/xmlbuilder/typings/index.d.ts": "/07BqBj9yYHPY+MURHIkWHhIykc46ftYGLPCBN97V0M=",
 		"package.json": "wDwdu/qmtT8cxzVIlarcUbFPKvaCiL6RHOh+LegPnRw=",
 		"tera-cli.exe": "oqz1llr5meBv6hZojJPZ5zr6GOLlfcgYfHSS/3gcEl0="
 	}
