--- a/manifest.json
+++ b/manifest.json
@@ -2801,11 +2801,20 @@
 		"node_modules/tera-data/map/protocol.370134.map": "zElPbDroV55Ubys2yGPa2KWdkhecPYVwztfnqlXXeZA=",
 		"node_modules/tera-data/map/protocol.371541.map": "fhYhBwZr9gvCZnXYCUYyxWLBvu8XaPRDtMZw4xTH8m4=",
 		"node_modules/tera-data/map/protocol.372754.map": "CFLjIOUZmYNyT6iOScci5Q+h0kB1u+f5t5ULi47zU6M=",
+		"node_modules/tera-data/map/protocol.373820.map": "CFLjIOUZmYNyT6iOScci5Q+h0kB1u+f5t5ULi47zU6M=",
+		"node_modules/tera-data/map/protocol.373821.map": "CFLjIOUZmYNyT6iOScci5Q+h0kB1u+f5t5ULi47zU6M=",
+		"node_modules/tera-data/map/protocol.373823.map": "CFLjIOUZmYNyT6iOScci5Q+h0kB1u+f5t5ULi47zU6M=",
+		"node_modules/tera-data/map/protocol.373824.map": "CFLjIOUZmYNyT6iOScci5Q+h0kB1u+f5t5ULi47zU6M=",
+		"node_modules/tera-data/map/protocol.373825.map": "CFLjIOUZmYNyT6iOScci5Q+h0kB1u+f5t5ULi47zU6M=",
+		"node_modules/tera-data/map/protocol.373826.map": "CFLjIOUZmYNyT6iOScci5Q+h0kB1u+f5t5ULi47zU6M=",
+		"node_modules/tera-data/map/protocol.373827.map": "CFLjIOUZmYNyT6iOScci5Q+h0kB1u+f5t5ULi47zU6M=",
+		"node_modules/tera-data/map/protocol.373828.map": "CFLjIOUZmYNyT6iOScci5Q+h0kB1u+f5t5ULi47zU6M=",
 		"node_modules/tera-data/map/sysmsg.27.map": "MZBjCaGL4i5JEtndLot2NdOrsoJ9UvM6mbwgskJQ/GE=",
 		"node_modules/tera-data/map/sysmsg.92.map": "FKVm2fY72YvwMKfoFjiIiDbcZBM04ZqCU6nbouNi6q4=",
 		"node_modules/tera-data/map/sysmsg.93.map": "D7NgTkeQQ106LwgEGhn4lyLQn+uH9keiPoihD21RRjM=",
 		"node_modules/tera-data/map/sysmsg.95.map": "ZlTIfLlz9BAayfvnJFsA4sui0cAifbprQ7ixSfUlAAc=",
 		"node_modules/tera-data/map/sysmsg.97.map": "15FFAESj27rv113ZGsDlJGSWeRVKTKVtC90DZ+kqHh8=",
+		"node_modules/tera-data/map/sysmsg.98.map": "15FFAESj27rv113ZGsDlJGSWeRVKTKVtC90DZ+kqHh8=",
 		"node_modules/tera-data/package.json": "6szRBOjdIGy1Esoc8Srna0mef8vP8LETWZEdEtlWhwQ=",
 		"node_modules/tera-data/protocol/C_ACCEPT_CONTRACT.1.def": "YElAxO4X2mV8JjItFENPXqusvV02opc+I7KW7UeD+TQ=",
 		"node_modules/tera-data/protocol/C_ACCEPT_FRIEND.1.def": "iihg/ooN9iqytfooGA8DMiRCHLyoXE2YnSlA4KXQoEo=",
@@ -4051,7 +4060,7 @@
 		"node_modules/tera-data/protocol/S_WHISPER.2.def": "iE3d/DaIs1qF0KgU8JrG1/lUZIRMVx8mEMCb57R8wiA=",
 		"node_modules/tera-data/protocol/S_WHISPER.3.def": "qJOA6SRspT5OuXexQLgTnbiJ6KIO3pAEjHnLvNIgV6M=",
 		"node_modules/tera-data/protocol/S_WORLD_QUEST_VILLAGER_INFO.1.def": "+QL8uw5ysSz0+0NL+VnYnNP4R4e4jfacjNoPcn6CRpU=",
-		"node_modules/tera-data/revisions.json": "/cOLB82/vCyQuTtxluEanBVgqsW18tmyiu5wfuCzIcM=",
+		"node_modules/tera-data/revisions.json": "jDCU/iIFdUHtowiupB2ghXVWDUWnKwdx77kYJ/c61AI=",
 		"node_modules/tera-data-parser/index.js": "cstD174uZ7uso51xXY6uuOtPjAeesjs2VX51a9r40ss=",
 		"node_modules/tera-data-parser/logger.js": "u6i44GWYnuAjLvYREZChU/609eQ6OPoHvwfPs8FO0Zs=",
 		"node_modules/tera-data-parser/node_modules/tera-vec3/README.md": "b37gX1W4iSHkiLrDFkl6FUftM07jKzNrzx5XdKjrdbw=",
